test/sh/error/func/invalid_num_params.sk
f(x: Int) {
	# do nothing
}

f(1, 2, 3)
